--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
-import ContactForm from '../../components/forms/ContactForm.astro';
-import Layout from '../../layouts/Page.astro';
+import ContactForm from '../components/forms/ContactForm.astro';
+import Layout from '../layouts/Page.astro';
 import { Container } from '@components/odyssey-theme';
 
 const seo = {
@@ -22,8 +22,8 @@ const seo = {
 				</p>
 				<div>
 					<p>
-						<em><a href="tel:8008675309">(800) 867-5309</a></em> • <em
-							><a href="mailto:hello@odysseytheme.com">hello@ourcompany.com</a
+						<em><a href="tel:+393923525741">(392) 352-5741</a></em> • <em
+							><a href="mailto:info@asura.it">info@asura.it</a
 							></em
 						>
 					</p>
