--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,18 +1,12 @@
 ---
 ---
-
-<p class="odyssey-logo">Odyssey</p>
+<img class="logo" src="/assets/images/asura.svg" alt="Asura mask"/>
 
 <style>
-	.odyssey-logo {
-		width: fit-content;
-		margin: 0;
-		font-family: var(--theme-font-family-serif);
-    font-size: var(--font-size-md);
-		color: inherit;
-	}
-	.odyssey-logo:hover {
-		text-decoration: underline;
-		cursor: pointer;
-	}
+  .logo {
+    width: 100px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
 </style>
