--- a/src/components/core/Footer.astro
+++ b/src/components/core/Footer.astro
@@ -11,47 +11,41 @@ const { footerSocials, footerLists, copyrightName, background, color, showPlug: 
   style={background && `--footer-bg:${background}; --footer-color:${color}`}
 >
   <Container>
-    <div class="footer-grid__container">
-      <div class="footer-brand__container">
-        <div>
-          <slot name="logo" />
-        </div>
-        <ul class="footer-socials__list">
-          {
-            footerSocials.map((social) => (
-              <li class="footer-socials__item">
-                <a
-                  href={social.url}
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="footer-socials__link"
-                  title={`Open ${social.name} profile`}
-                >
-                  <Icon name={social.icon} width={24} height={24} />
-                </a>
-              </li>
-            ))
-          }
-        </ul>
-      </div>
-      {
-        footerLists.map((list) => (
-          <div>
-            <p><strong>{list.title}</strong></p>
-            <ul class="footer-link__list">
-              {list.items.map((item) => (
-                <li>
-                  <a href={item.slug}>{item.title}</a>
-                </li>
-              ))}
-            </ul>
-          </div>
-        ))
-      }
-    </div>
+		<div class="footer-grid__container">
+			<div class="footer-left">
+
+
+				<div>
+					<slot name="logo" />
+				</div>
+			</div>
+			<div class="footer-right">
+				<ul class="footer-socials__list">
+					{
+						footerSocials.map((social) => (
+							<li class="footer-socials__item">
+								<a
+									href={social.url}
+									target="_blank"
+									rel="noopener noreferrer"
+									class="footer-socials__link"
+									title={`Open ${social.name} profile`}
+								>
+									<Icon name={social.icon} width={24} height={24} />
+								</a>
+							</li>
+						))
+					}
+				</ul>
+				<span class="footer-brand">Asura | Jiu-Jitsu Studio</span>
+				<a href="https://maps.app.goo.gl/1n69WiV9kNi9Pqom7">
+					<Icon name="ic:baseline-location-on" width={24} height={24} />
+					<span>Via Gioacchino Quarello 15a — Torino, Italy</span>
+				</a>
+			</div>
+		</div>
     <div class="footer-copyright__container">
       {showPlug && <Plug/>}
-      <p>Copyright &copy; {new Date().getFullYear()} {copyrightName}</p>
     </div>
 
   </Container>
