--- a/src/components/core/Footer.astro
+++ b/src/components/core/Footer.astro
@@ -47,7 +47,7 @@ const { footerSocials, footerLists, copyrightName, background, color, showPlug: 
     <div class="footer-copyright__container">
       {showPlug && <Plug/>}
     </div>
-
+		<p>Copyright &copy; {new Date().getFullYear()} {copyrightName}</p>
   </Container>
 </footer>
 
