--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -1,3 +1,16 @@
 ---
+import ContactForm from '../components/forms/ContactForm.astro';
+import Layout from '../layouts/Page.astro';
+import { Container } from '@components/odyssey-theme';
 
+const seo = {
+	title: 'Timetable | Asura Jiu-Jitsu Studio',
+	description: 'Timetable Page',
+};
 ---
+
+<Layout seo={seo}>
+	<Container>
+
+	</Container>
+</Layout>
