--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Page.astro';
 import { Container } from '@components/odyssey-theme';
 
 const seo = {
-	title: 'Contact | Astro Odyssey Theme',
+	title: 'Contatti | Asura Jiu-Jitsu Studio',
 	description: 'Contact Page',
 };
 ---
@@ -13,12 +13,12 @@ const seo = {
 	<Container>
 		<section class="contact-hero__section">
 			<div class="contact-hero__text-section">
-				<h1>Contact Us</h1>
+				<h1>Contattaci</h1>
 				<p>
-					This is a contact form using Odyssey's form components to create a
-					contact form component. The contact form is setup to use Netlify's
-					form detection; however, it can easily be translated to other popular
-					form services such as Formspree, Getform, Formspark, etc.
+					Hai domande sui nostri corsi, vuoi prenotare una lezione di prova o
+					semplicemente saperne di più sul mondo del Jiu-Jitsu? Siamo qui per
+					aiutarti. Compila il modulo e ti risponderemo il prima possibile.
+					Se preferisci, puoi anche contattarci direttamente tramite telefono o email.
 				</p>
 				<div>
 					<p>
