--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Layout from '../layouts/Page.astro';
 import TextAndImageHero from '../components/sections/heros/TextAndImageHero.astro';
 
 const seo = {
-	title: 'Landing Page #1 | Astro Odyssey Theme',
-	description: 'Landing Page #1 | Astro Odyssey Theme',
+	title: 'Asura | Jiu-Jitsu Studio',
+	description: 'Welcome to Asura Jiu-Jitsu Studio, where we offer top-notch training in Brazilian Jiu-Jitsu.',
 };
 ---
 
